Added option to `Right-Click` to leave selected portal

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -162,6 +162,10 @@ messages:
         portal-end: |-
           &f
           &dSpied, lai teleportētos!
+        portal-end-leave: |-
+          &f
+          &dSpied, lai teleportētos!
+          &cRight-Click, lai pamestu šo portālu!
     public-portals:
       gui-title: "Publiskie portāli"
       item-names:
